2009-12-16  NANRI Masaoki  <southly@gmail.com>

	* src : support IMR_DOCUMENTFEED.
	via http://fixdap.com/p/xyzzy/7376/
	以下で動作を確認。
	さいた　　　　　あたたかい
	布を　　　　　　牛乳
	花が　　　　　　春
	時間を　　　　　

	* src : fix set-buffer-modified-p.
	(set-buffer-modified-p nil) をした時に以前更新なし状態だった点が更
	新無し状態のままなのを修正。

	* src : fix inverse-cursor-line.
	(setq inverse-cursor-line t)
	の状態にすると行カーソルと折り返し線の交点が反転したまま残ってしま
	うのを修正。

2009-12-10  NANRI Masaoki  <southly@gmail.com>

	* src : fix format "~n@A".
	http://d.hatena.ne.jp/bowbow99/20090829/1251547986

2009-12-09  NANRI Masaoki  <southly@gmail.com>

	* src : add "*brackets-is-wildcard-character*" to history-variable.
	共通設定の「[...]はワイルドカード」の設定が保存されないので、対応す
	る変数をヒストリに追加。

	* src : fix dump hash-table.
	シンボルがキーのハッシュテーブルをダンプファイルに入れた場合、
	gethashで値がとれない問題があった。ただし、maphashで全要素を取得す
	ることはできた。
	---- $XYZZY/site-lisp/siteinit.l の内容
	(defparameter *hash* (make-hash-table))
	(dolist (i '((aaa . abab) (bbb . bcbc) (ccc . cdcd)))
	  (setf (gethash (car i) *hash*) (cdr i)))
	---- ダンプファイルをロードしたあとに評価
	(gethash 'aaa *hash*)
	=>nil ; 本来は abab
	=>nil ;        t

	(maphash #'(lambda (key val) (format t "~S: ~S~%" key val)) *hash*)
	aaa: abab
	bbb: bcbc
	ccc: cdcd
	=>nil
	----
	シンボルのハッシュ値はオブジェクトのアドレスを元に計算しているが、
	ダンプファイル作成時とダンプファイルロード後ではシンボルオブジェク
	トのアドレスが異なり、同一のハッシュ値にならないのが原因。

	ダンプファイルをロードしたあとにrehashするように修正。

	* lisp : fix defpackage.
	defpackageマクロで:exportオプションを指定できない不具合を修正。
	[xyzzy:09241]

	* lisp : fix shell-alternate-send-input.
	http://xyzzy.s53.xrea.com/wiki/index.php?patch%2F15

	* lisp : fix calendar.
	カレンダーの祝日を現行法にあわせる。
	[xyzzy:09224]

	* lisp : fix typo in lisp/timestmp.l.
	コメントのtypoを修正。
	[xyzzy:09158]

	* lisp : fix typo in lisp/encoding.l.
	provideのtypoを修正。
	[xyzzy:09158]

	* lisp : fix typo in lisp/css-mode.l.
	provideのtypoを修正。
	[xyzzy:09158]

	* lisp : fix typo in lisp/builtin.l.
	主に引数のtypoを修正。
	[xyzzy:09158]

	* src : fix hash-table rehash size.
	ハッシュテーブルの要素数が80000を越える辺りから、ハッシュテーブルの
	サイズの増加量が100に固定される。そのため頻繁にrehashされパフォーマ
	ンスが低下していた。